syntax = "proto3";

option go_package = "/pb";

// 注册请求 
message RegisterRequest {
    string username = 1;
    string password = 2;
}

// 注册响应
message RegisterReply {
    int64 uid = 1;
    string token = 2;
    int32 code = 3;
}  

// 登录请求
message LoginRequest {
    string username = 1;
    string password = 2;
}

// 登录响应
message LoginReply {
    int64 uid = 1;
    string token = 2;
    int32 code = 3;
}

// 验证token请求
message AuthRequest {
    int64 uid = 1;
    string token = 2;
}

// 验证token响应
message AuthReply {
    int32 code = 1;
}

// 登出请求
message LogoutRequest {
    int64 uid = 1;
    string token = 2;
}

// 登出响应
message LogoutReply {
    int32 code = 1;
}

service Auth {
    // 登录
    rpc Login(LoginRequest) returns (LoginReply);
    // 注册
    rpc Register(RegisterRequest) returns (RegisterReply);
    // 验证token
    rpc Auth(AuthRequest) returns (AuthReply);
    // 登出
    rpc Logout(LogoutRequest) returns (LogoutReply);
}
